FEC-814 #comment set accessibility labels position to absolute to prevent icons misalignment

--- a/skins/kdark/css/layout.css
+++ b/skins/kdark/css/layout.css
@@ -258,6 +258,7 @@ body {
 	height: 1px !important;
 	overflow: hidden;
 	display: block;
+    position: absolute;
 }
 .accessibilityLabel{
 	font-size: 0;
